<resources>
    <string name="app_name">UgreyMobileApp</string>
    <string name="login_title">Вход в систему</string>
    <string name="email_hint">Электронная почта</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="fill_all_fields">Пожалуйста, заполните все поля</string>
    <string name="invalid_credentials">Неверный email или пароль</string>

    <string name="register_title">Регистрация</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="hint_first_name">Имя</string>
    <string name="hint_middle_name">Отчество (если есть)</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_confirm_password">Подтвердите пароль</string>
    <string name="btn_register">Зарегистрироваться</string>
    <string name="have_account">Уже есть аккаунт? Войти</string>
    <string name="registration_success">Регистрация успешна!</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="database_error">Ошибка базы данных</string>

    <string name="profile_image">Фото профиля</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="email">Email</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="cancel">Отмена</string>
    <string name="delete_account">Удалить аккаунт</string>

    <string name="reminders_title">Мои напоминания</string>
</resources>